--- a/www/wavs.html
+++ b/www/wavs.html
@@ -31,10 +31,11 @@ wave canvas {
 <script>
 
 var wavSetConfs = {
+  'xeno-canto':             {head: null},
   //'recordings':             {head: null}, // O(10)
   //'mlsp-2013':              {head: 100},  // 600
   //'nips4b':                 {head: null}, // 1600
-  'warblr-2016-ff1010bird': {head: 100},  // 6000
+  //'warblr-2016-ff1010bird': {head: 100},  // 6000
   //'warblr-2016-warblrb10k': {head: 100},  // 7000
   //'birdclef-2015':          {head: 100},
   //'birdclef-2015':          {head: 1000}, // Chrome at rest: ~7GB ram + ~100-200% cpu
