--- a/www/wavs.html
+++ b/www/wavs.html
@@ -31,9 +31,9 @@ wave canvas {
 <script>
 
 var wavSetConfs = {
-  'xeno-canto':             {head: null},
+  //'xeno-canto':             {head: null},
   //'recordings':             {head: null}, // O(10)
-  //'mlsp-2013':              {head: 100},  // 600
+  'mlsp-2013':              {head: 100},  // 600
   //'nips4b':                 {head: null}, // 1600
   //'warblr-2016-ff1010bird': {head: 100},  // 6000
   //'warblr-2016-warblrb10k': {head: 100},  // 7000
